[package]
name = "ldr"
version = "1.0.2"
edition = "2021"
description = "Log, Do, Review - A simple todo system"
license = "MIT"
authors = ["Stephen Waits <steve@waits.net>"]
repository = "https://github.com/swaits/ldr"
homepage = "https://github.com/swaits/ldr"
keywords = ["todo", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
xdg = "3.0.0"
termion = "2.0"

[dev-dependencies]
tempfile = "3.20.0"
